# Razum-2.0

./: .dockerignore  .env.example  .gitignore  .~lock.api.md#  Dockerfile  README.md  docker-compose.yml  func_api.odt  homepage2.html  html  main  pyproject.toml
project/: settings.py
project/accounts/: admin.py  views.py
project/accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py
project/planner/: models.py  urls.py  views.py
project/planner/migrations/: 0001_initial.py
project/project/: settings.py  urls.py
project/static/css/: grid.css  style.css  task_grid.css
project/static/js/: menu.js
project/templates/: _base.html
project/templates/account/: signup.html
project/templates/planner/: homepage.html  project_detail.html  project_homepage.html  subtask_detail.html  subtask_list.html  task_detail.html  task_list.html
