[tool.poetry]
package-mode = false
name = "razum-2-0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
django-allauth = "^65.5.0"


[tool.poetry.group.dev.dependencies]
djlint = "^1.36.4"
isort = "^6.0.1"
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
